input 태그와 onChagne 이벤트

--- a/src/App.css
+++ b/src/App.css
@@ -43,6 +43,11 @@ body {
   margin-right: 5px;
 }
 
+.inputValue {
+  display: block;
+  margin: 5px auto;
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
