글을 추가하는 기능.
배열의 맨 앞 부분에 넣고 싶으므로 배열에 관한 메소드 중 unshift를 써주었다.

--- a/src/App.css
+++ b/src/App.css
@@ -43,9 +43,25 @@ body {
   margin-right: 5px;
 }
 
-.inputValue {
+.publish {
   display: block;
   margin: 5px auto;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.publish input {
+  width: 30%;
+  height: 50px;
+  margin-bottom: 10px;
+}
+
+.publish button {
+  width: 100px;
+  padding: 5px;
 }
 
 .App-logo {
