--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,8 @@
 ul,
 li {
   list-style: none;
+  padding: 0px;
+  margin: 0;
 }
 
 h4 {
@@ -24,23 +26,30 @@ body {
 .boardList {
   font-weight: 600;
   font-size: 20px;
+  padding-left: 20px;
   padding-bottom: 2px;
 }
 
 .modal {
   text-align: center;
   background: skyblue;
-  width: 70%;
-  margin: auto;
+  width: 30%;
+  margin: 40px auto;
   padding: 20px;
 }
 
 .btns {
+  margin: 10px;
   text-align: center;
 }
 
 .btns button:first-child {
   margin-right: 5px;
+}
+
+.btns button {
+  width: 100px;
+  padding: 5px;
 }
 
 .publish {
@@ -62,39 +71,4 @@ body {
 .publish button {
   width: 100px;
   padding: 5px;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
